tests/ui/traits/const-traits/const-and-non-const-impl.stderr
error[E0119]: conflicting implementations of trait `Add` for type `Int`
  --> $DIR/const-and-non-const-impl.rs:22:1
   |
LL | impl std::ops::Add for Int {
   | -------------------------- first implementation here
...
LL | impl const std::ops::Add for Int {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Int`

error[E0117]: only traits defined in the current crate can be implemented for primitive types
  --> $DIR/const-and-non-const-impl.rs:5:1
   |
LL | impl const std::ops::Add for i32 {
   | ^^^^^^^^^^^-------------^^^^^---
   |            |                 |
   |            |                 `i32` is not defined in the current crate
   |            `i32` is not defined in the current crate
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0117, E0119.
For more information about an error, try `rustc --explain E0117`.
